@@ -2,7 +2,7 @@
 # -*- coding: utf-8 -*-
 use strict;
 use warnings;
-use List::Util qw(min);
+use List::Util qw(sum min);
 use Getopt::Long qw(:config no_ignore_case);
 use Encode;
 use utf8;
@@ -31,7 +31,7 @@ GetOptions (
 my $key = shift @ARGV;
 $key = Encode::decode_utf8($key) if not utf8::is_utf8($key);
 $key = regstr($key) if $use_regstr;
-my $key_chars_r = counthash_to_list($n_of_ngram ? mk_ngram($key, $n_of_ngram) : mk_all_ngram($key));
+my $key_char_r = $n_of_ngram ? mk_ngram($key, $n_of_ngram) : mk_all_ngram($key);
 
 my @results;
 while (<>) {
@@ -39,8 +39,9 @@ while (<>) {
     my $line = $_;
     my $str = (defined $field_2) ? ((split(/\t/, $line))[$field_2] || "") : $line;
     $str = regstr($str) if $use_regstr;
-    my $ent_chars_r = counthash_to_list($n_of_ngram ? mk_ngram($str, $n_of_ngram) : mk_all_ngram($str));
-    my $score = sprintf("%.4f", calc_similarity($key_chars_r, $ent_chars_r));
+    my $ent_char_r = $n_of_ngram ? mk_ngram($str, $n_of_ngram) : mk_all_ngram($str);
+    my $common = common_items($key_char_r->{str}, $ent_char_r->{str});
+    my $score = sprintf("%.4f", calc_similarity($key_char_r->{num}, $ent_char_r->{num}, $common->{num}));
     store_nbest(\@results, $top_n, {score => $score, line => $line, line_number => $.});
 }
 
@@ -94,10 +95,10 @@ sub mk_ngram {
     for (my $i = 0; $i < @chars - ($n - 1); $i++) {
 	$ngram{join("", @chars[$i..($i + ($n - 1))])}++;
     }
-    return \%ngram;
+    return {num => sum(values %ngram), str => \%ngram};
 }
 
-# "aab" => {"aac":1,"aa":1,"ab":1,"a":2,"b":1}
+# "aab" => {"aab":1,"aa":1,"ab":1,"a":2,"b":1}
 sub mk_all_ngram {
     my ($key) = @_;
     my @chars = split(//, $key);
@@ -107,38 +108,27 @@ sub mk_all_ngram {
 	    $vgram{join("", @chars[$i..$j])}++;
 	}
     }
-    return \%vgram;
+    return {num => sum(values %vgram), str => \%vgram};
 }
 
-# {"aac":1,"aa":1,"ab":1,"a":2,"b":1} => ("aaa","aa","ab","a","a","b")
-sub counthash_to_list {
-    my ($h_r) = @_;
-    return [sort map {($_) x $h_r->{$_}} keys %$h_r];
-}
-
-# (a a b c x) vs (a b d x x) => (a b x)
+# {"a":2,"b":3,"c":1,"x":1} vs {"a":1,"b":2,"x":2} => {"a":1,"b":2,"x":1}
 sub common_items {
-    my ($a_r, $b_r) = @_;
-    my @common_items;
-    for (my ($ia, $ib) = (0, 0); $ia < @$a_r and $ib < @$b_r; $ia++, $ib++) {
-	if ($a_r->[$ia] eq $b_r->[$ib]) {
-	    push @common_items, $a_r->[$ia];
-	} elsif (($a_r->[$ia] cmp $b_r->[$ib]) > 0) {
-	    $ia--;
-	} else {
-	    $ib--;
-	}
+    my ($h1_r, $h2_r) = @_;
+    my %common;
+    foreach my $c (keys %$h1_r) {
+	next unless $h2_r->{$c};
+	my $com = min($h1_r->{$c}, $h2_r->{$c});
+	$common{$c} += $com;
     }
-    return \@common_items;
+    return {num => sum(values %common)||0, str => \%common};
 }
 
 # 類似度計算
 sub calc_similarity {
-    my ($A_r, $B_r) = @_;
-    my @AB = @{common_items($A_r, $B_r)};
-    return 0 if @AB == 0;
-    return @AB / @$A_r if $similarity =~ /^qbase/;
-    return @AB / (@$A_r + @$B_r - @AB) if $similarity =~ /^jaccard/;
-    return @AB * 2 / (@$A_r + @$B_r) if $similarity =~ /^dice/;
-    return @AB / min(@$A_r+0, @$B_r+0) if $similarity =~ /^simpson/;
+    my ($A, $B, $AB) = @_;
+    return 0 if $AB == 0;
+    return $AB / $A if $similarity =~ /^qbase/;
+    return $AB / ($A + $B - $AB) if $similarity =~ /^jaccard/;
+    return $AB * 2 / ($A + $B) if $similarity =~ /^dice/;
+    return $AB / min($A, $B) if $similarity =~ /^simpson/;
 }
