@@ -3,8 +3,8 @@
 use strict;
 use warnings;
 use Search::Dict;
-use List::Util qw(max min);
-use Getopt::Long;
+use List::Util qw(sum max min);
+use Getopt::Long qw(:config no_ignore_case);
 use utf8;
 use open ':utf8';
 binmode STDIN, ":utf8";
@@ -21,6 +21,7 @@ my $auto_cut = 1; # 1(ON) or 0(OFF)
 my $reranking = 1; # 1(ON) or 0(OFF)
 my $show_mode = 1; # 0(OFF) or 1(with query+score) or 2(with query)
 my $similarity = "qbase"; # qbase(default) jaccard dice simpson
+my $n_of_ngram = 1; # for ccrate. 1:uni-gram, 2:bi-gram, 3:tri-gram, ...
 GetOptions (
     "index=s" => \$idx_fn,
     "entries=s" => \$ent_fn,
@@ -32,12 +33,13 @@ GetOptions (
     "show=s" => \$show_mode,
     "reranking=s" => \$reranking,
     "similarity=s" => \$similarity,
+    "N|length=s" => \$n_of_ngram,
     );
 
 open(my $fh_idx, "<", $idx_fn) or die "can't open [$idx_fn]";
 open(my $fh_ent, "<", $ent_fn) or die "can't open [$ent_fn]";
 
-my $n_of_ngram = do {(my $l = <$fh_idx>) =~ s/^([^\t]+)\t.*$/$1/s; length($l);}; #  ngramのnを調べる
+my $n_of_ngram_of_ii = do {(my $l = <$fh_idx>) =~ s/^([^\t]+)\t.*$/$1/s; length($l);}; #  ngramのnを調べる
 my $ii_top_n = $top_n * 5; # 転置インデックス検索で取得する数 (結果表示する数のN倍)
 @sort_by = qw(hits ccrate vgrate) if not @sort_by; # default order of sort
 
@@ -49,8 +51,8 @@ while (<>) {
 
     # get results
     my $lines_r = do {
-	my $ngram_r = mk_ngram($key, $n_of_ngram);
-	my $id_hit_r = look_and_get_ids([keys %$ngram_r], $fh_idx);
+	my $ngram_r = mk_ngram($key, $n_of_ngram_of_ii);
+	my $id_hit_r = look_and_get_ids([keys %{$ngram_r->{str}}], $fh_idx);
 	my @cand_ids = sort {$id_hit_r->{$b} <=> $id_hit_r->{$a}} keys %$id_hit_r;
 	@cand_ids = @cand_ids[0..($ii_top_n-1)] if $ii_top_n < @cand_ids;
 	my $l_r = get_contents(\@cand_ids, $fh_ent);
@@ -74,32 +76,6 @@ close($fh_idx);
 close($fh_ent);
 
 exit;
-
-# reranking: calc score, filter, sort
-sub re_ranking {
-    my ($key, $lines_r, $auto_cut) = @_;
-
-    # calc
-    my $rr = calc_score_ccrate($key, $lines_r);
-    $rr = calc_score_vgrate($key, $lines_r);
-    
-    # filter
-    my $max_ccrate = max(map {$_->{ccrate}} @$rr);
-    my $max_vgrate = max(map {$_->{vgrate}} @$rr);
-    if ($auto_cut) {
-	@$rr = grep {!($max_ccrate == 1 and $_->{ccrate} < 1)
-			 and $_->{vgrate} > 0
-			 and ($max_vgrate/$_->{vgrate} < 2)} @$rr;
-    }
-
-    # sort
-    return [sort {
-	foreach my $k (@sort_by) {
-	    my $v = ($b->{$k} <=> $a->{$k});
-	    return $v if $v;
-	}
-     } @$rr];
-};
 
 # search invertd index. 複数キーでの検索結果のマージ
 # FORMAT: ^のため[\t]6ZKYBA,6ZKYN3,799VBT[\n]$
@@ -129,6 +105,32 @@ sub regstr {
     return $str;
 }
 
+# reranking: calc score, filter, sort
+sub re_ranking {
+    my ($key, $rr, $auto_cut) = @_;
+
+    # calc
+    calc_score_ccrate($key, $rr, $n_of_ngram);
+    calc_score_vgrate($key, $rr);
+    
+    # filter
+    my $max_ccrate = max(map {$_->{ccrate}} @$rr);
+    my $max_vgrate = max(map {$_->{vgrate}} @$rr);
+    if ($auto_cut) {
+	@$rr = grep {!($max_ccrate == 1 and $_->{ccrate} < 1)
+			 and $_->{vgrate} > 0
+			 and ($max_vgrate/$_->{vgrate} < 2)} @$rr;
+    }
+
+    # sort
+    return [sort {
+	foreach my $k (@sort_by) {
+	    my $v = ($b->{$k} <=> $a->{$k});
+	    return $v if $v;
+	}
+     } @$rr];
+};
+
 # "abc abc",3 => {"abc":2,"bc ":1,"c a":1," ab":1}
 sub mk_ngram {
     my ($key, $n) = @_;
@@ -137,10 +139,10 @@ sub mk_ngram {
     for (my $i = 0; $i < @chars - ($n - 1); $i++) {
 	$ngram{join("", @chars[$i..($i + ($n - 1))])}++;
     }
-    return \%ngram;
+    return {num => sum(values %ngram), str => \%ngram};
 }
 
-# "aab" => {"aac":1,"aa":1,"ab":1,"a":2,"b":1}
+# "aab" => {"aab":1,"aa":1,"ab":1,"a":2,"b":1}
 sub mk_all_ngram {
     my ($key) = @_;
     my @chars = split(//, $key);
@@ -150,50 +152,40 @@ sub mk_all_ngram {
 	    $vgram{join("", @chars[$i..$j])}++;
 	}
     }
-    return \%vgram;
+    return {num => sum(values %vgram), str => \%vgram};
 }
 
-# {"aac":1,"aa":1,"ab":1,"a":2,"b":1} => ("aaa","aa","ab","a","a","b")
-sub counthash_to_list {
-    my ($h_r) = @_;
-    return [sort map {($_) x $h_r->{$_}} keys %$h_r];
-}
-
-# (a a b c x) vs (a b d x x) => (a b x)
+# {"a":2,"b":3,"c":1,"x":1} vs {"a":1,"b":2,"x":2} => {"a":1,"b":2,"x":1}
 sub common_items {
-    my ($a_r, $b_r) = @_;
-    my @common_items;
-    for (my ($ia, $ib) = (0, 0); $ia < @$a_r and $ib < @$b_r; $ia++, $ib++) {
-	if ($a_r->[$ia] eq $b_r->[$ib]) {
-	    push @common_items, $a_r->[$ia];
-	} elsif (($a_r->[$ia] cmp $b_r->[$ib]) > 0) {
-	    $ia--;
-	} else {
-	    $ib--;
-	}
+    my ($h1_r, $h2_r) = @_;
+    my %common;
+    foreach my $c (keys %$h1_r) {
+	next unless $h2_r->{$c};
+	my $com = min($h1_r->{$c}, $h2_r->{$c});
+	$common{$c} += $com;
     }
-    return \@common_items;
+    return {num => sum(values %common)||0, str => \%common};
 }
 
 # 類似度計算
 sub calc_similarity {
-    my ($A_r, $B_r) = @_;
-    my @AB = @{common_items($A_r, $B_r)};
-    return 0 if @AB == 0;
-    return @AB / @$A_r if $similarity =~ /^qbase/;
-    return @AB / (@$A_r + @$B_r - @AB) if $similarity =~ /^jaccard/;
-    return @AB * 2 / (@$A_r + @$B_r) if $similarity =~ /^dice/;
-    return @AB / min(@$A_r+0, @$B_r+0) if $similarity =~ /^simpson/;
+    my ($A, $B, $AB) = @_;
+    return 0 if $AB == 0;
+    return $AB / $A if $similarity =~ /^qbase/;
+    return $AB / ($A + $B - $AB) if $similarity =~ /^jaccard/;
+    return $AB * 2 / ($A + $B) if $similarity =~ /^dice/;
+    return $AB / min($A, $B) if $similarity =~ /^simpson/;
 }
 
 # 文字列照合でスコア計算
 # cc: common chars rate
 sub calc_score_ccrate {
-    my ($key, $ents_r) = @_;
-    my $key_chars_r = counthash_to_list(mk_ngram($key, 1));
+    my ($key, $ents_r, $n_of_ngram) = @_;
+    my $key_char_r = mk_ngram($key, $n_of_ngram);
     foreach my $e (@$ents_r) {
-	my $ent_chars_r = counthash_to_list(mk_ngram($e->{str}, 1));
-	$e->{ccrate} = sprintf("%.4f", calc_similarity($key_chars_r, $ent_chars_r));
+	my $ent_char_r = mk_ngram($e->{str}, $n_of_ngram);
+	my $common = common_items($key_char_r->{str}, $ent_char_r->{str});
+	$e->{ccrate} = sprintf("%.4f", calc_similarity($key_char_r->{num}, $ent_char_r->{num}, $common->{num}));
     }
     return $ents_r;
 } 
@@ -202,10 +194,11 @@ sub calc_score_ccrate {
 # vg: variable gram rate
 sub calc_score_vgrate {
     my ($key, $ents_r) = @_;
-    my $key_vgram_r = counthash_to_list(mk_all_ngram($key));
+    my $key_char_r = mk_all_ngram($key);
     foreach my $e (@$ents_r) {
-	my $ent_vgram_r = counthash_to_list(mk_all_ngram($e->{str}));
-	$e->{vgrate} = sprintf("%.4f", calc_similarity($key_vgram_r, $ent_vgram_r));
+	my $ent_char_r = mk_all_ngram($e->{str});
+	my $common = common_items($key_char_r->{str}, $ent_char_r->{str});
+	$e->{vgrate} = sprintf("%.4f", calc_similarity($key_char_r->{num}, $ent_char_r->{num}, $common->{num}));
     }
     return $ents_r;
 } 
